# virtual-disk-manager

./: .gitignore  CMakeLists.txt  README.md
include/: arguments_parser.h  vhdx.h
src/: arguments_parser.cpp  main.cpp  vhdx.cpp
tests/: CMakeLists.txt
tests/arguments_parser/: CMakeLists.txt  main.cpp
tests/vhdx/: CMakeLists.txt  main.cpp
